# OS-Project2

./: .gitignore  CMakeLists.txt  README.md  dictionary.txt  nonsense_words.txt
src/: main.cpp  pipe.cpp  pipe.hpp  process.cpp  process.hpp
